enable color tests on linux

As far as I can tell, these tests were never really broken,
but at some point they started failing because they don't
ask for pixel output.

Bug: 767926
Change-Id: I80e6934b2c6b07c99a75aec68b0ba6fb3880d193
Reviewed-on: https://chromium-review.googlesource.com/1151715
Commit-Queue: Fredrik Hubinette <hubbe@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579121}
Former-commit-id: d2610fdbfe23ad2be4b771a98707b5036300b4d0